Update login design, header design, and fix various bugs throughout the site

--- a/src/app/components/charts/dashboard-cards/dashboard-cards.component.html
+++ b/src/app/components/charts/dashboard-cards/dashboard-cards.component.html
@@ -4,7 +4,7 @@
       <div class="card">
         <i class="fa fa-list-alt" aria-hidden="true"></i>
         <div class="media-body">
-          <h4 countUp [endVal]="totalReviews" startVal=0></h4>
+          <h4 countUp [endVal]="totalSurveys" startVal=0></h4>
           <span>Total Reviews</span>
         </div>
       </div>
