--- a/src/app/components/supervisor-tools/manage-users/manage-users.component.html
+++ b/src/app/components/supervisor-tools/manage-users/manage-users.component.html
@@ -29,5 +29,10 @@
             </ng-template>
         </p-column>
     </p-dataTable>
-    <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[10, 25, 50, 100]"></mat-paginator>
+    <mat-paginator 
+        [length]="length" 
+        [pageSize]="pageSize" 
+        [pageSizeOptions]="[10, 25, 50, 100]"
+        (page)="pageEvent = onPageEvent($event)">
+    </mat-paginator>
 </div>
